grafana smtp enable

--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:JO1HuoO5,iv:WgdDCo23luOb2g0MbA5Y2bCxlC8m3+bv0aV7RoVPEQw=,tag:r6qGyShygCOfl4NtLqWRSQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:GsDM2xTf,iv:mpUhHTk4eQsw2JH1tVaaF8hBJUOsUUpgYki4mfyWq8Y=,tag:bOGzzvGO9BBpyhXNgE86TQ==,type:str]
+kind: ENC[AES256_GCM,data:+/DDpa7J,iv:F4mhzK6Qgq/Qi9H7xJRPEWwPF29B+FL6Om3PYPozfW4=,tag:Bpo1JIznaDkzpSatmBn3Aw==,type:str]
+ansible_user: ENC[AES256_GCM,data:NsbDS6ap,iv:0oBtBY8z8crJaCMKpt7t5PA8kI5LwstJDgHXg2Xo1xQ=,tag:H1eksraZ8TVNsVXaXBZlPg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnc04xSHVEcjQ5eVROeVQ3
-            aUFoMGZGTmFvRnJmSE5SYUx2bzkxWTVVZnhBCkpKdXpEYnoySjhHZFd5MXBkeHh5
-            THNHNUV4VisrZWZwRnN1N1BuclZVUjQKLS0tIGtGTkpCUndBMDBvVnIyV3BZOWZq
-            OWx5OWNlR1doNXBDdGN5Sm5rYWlYTmMKy1sPQ4LWptBdd0HDQxRJHNTd/oi2ssR4
-            X4hCA1PQWZWtC5O1sQrSr1eS7vXES/sCbwAK3lG1o2RsVQhyLFxG5g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQMkRzeEFmdUdGT0x2cUlw
+            WUZManBHRjU5ZGIrcEkyUVA5cFpTK2Q4UFY0CmVGR0hCRnkwUXk2b2lLN243N01w
+            MldqaHNpVXIzYUZFK21WMTFBelpmV0kKLS0tIC9mTnJXSGc0ZC8yNXRMTUxCcElR
+            TnRoa0o0dGVMYXQ4b0hFaTh4MUd2WlEKfg6T69DAHwtE92xZ4srLFTX/ltAyulwv
+            LaBXaL8McQj5/DNt0sE3C5TxGSmhVEJ0KwmSUtlU3RklOpc839K3Qw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-02T04:14:10Z"
-    mac: ENC[AES256_GCM,data:c5SZpTe2+xFZfcb7ikggb4w0moteZzSesyNNPEqjfX1zESeGSdiz13JFuqIuQ4Xler/mVAbdzm7nH+ic3CW1ck0dc1QxrEN2/vkUqTrhpsmw6bquMG4+X1uV/Hz6y1XFRF000PQizNlnfmfP37F0txMx/ssQ3UJKjF1aKJfQeig=,iv:pmn6BtnOCGc6EdfxFPLyFbLQ795CnMeJ1cF7lLeO2Og=,tag:Rr1nWck6EpCp3Dx1s4cMFw==,type:str]
+    lastmodified: "2023-03-03T00:44:42Z"
+    mac: ENC[AES256_GCM,data:F/TUA2cNEodL5C/V2z9h0hRSYa1G7Q9tMOZIE+nctONEByDgthPNU3GQ4AYAOiDqKQwhe5mcgReAlDSQwuGBuWNEiBqYCWwVfx7UvWUze8irCEzqvh2XoxsIlQsiNCGXQVpqbvqnT6AigogUoxVrWEKdyTxihZqRvTi/+DGOdtI=,iv:N5XtN3GS/4/mKkeddVTKk5d6gqdz9fHdX07M0ilr7ts=,tag:dYPvDcjcMuOkOIT0RdBJsQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
