--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:OyloD/Ka,iv:l3UsuFcIBI+CEvbUCVzlagFgehxqDTxpFZtiS8Rymak=,tag:u9srdByyG3LQixTb62CVJg==,type:str]
-ansible_user: ENC[AES256_GCM,data:Ah1YWHk8,iv:cZgqvljRAHi7xw0HM4JuULlxjqkKD7XW7qmCvXhzjPI=,tag:yfjT49HeVeH88VoGAA4Ijg==,type:str]
+kind: ENC[AES256_GCM,data:7mgVOoEV,iv:KgPimMWVOj5XQdAi46bn+p2fccmdRySyOxxoeKinOfU=,tag:1uqCo+1+yHJp13R7zZkZ/A==,type:str]
+ansible_user: ENC[AES256_GCM,data:WvK4CsCi,iv:rJgyjkSNuFRfCmFj4re8HvXjH7nwfenW98VzR0XYTFE=,tag:IwwS6DTGejh8uVzEhzqf9Q==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZbHJtNWJqVHYycHQ3b0k3
-            NFNDY3VIYU1XdVlPUWJHcWIvektHdkoyNkhBClI3eWZxdVorZXRmQlFMcW9GUElV
-            ZjFwQmR6Q2xRalhqTmFOVnBKZXZMK2sKLS0tIG9tWTVqZ1ZYNEQ4YkZtVjBLM3JT
-            WjZTWVo3NmZoaVdwcEQrRWhBVnNVS00KfgGssgE1pQaTwCJ61yE1UPbcnco3jnY4
-            qaxg5kNPOksPIbGnrVb1Wflt5C5+YQ7u/j+8q4DWocO0xBfEyKaT7w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBreTZXZW1XSXRGTlBQclE3
+            WTQzMXhmcTJiWngwNUtMVld2UWRmYmlMaVhZCmpRMUk3OGprbFFTZWdTYjRsS2NV
+            clc1UC9XSVhFb1BTUVRBRkRDbHR1bFUKLS0tIG5mcWtDbTRpYTNuYnZNRVdPTlhh
+            aUFjQS9nc3F1RkdtQmk2V0lQRWdJcWMK9hdaG+H5GfRSBvXLW6/gjMj6f43VSFZJ
+            hrfV+OVOxI3BFL/jlbnpR3XAWLPJ7dJxPmicYLpNYh8fPvo0gwMEgQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-02T04:14:10Z"
-    mac: ENC[AES256_GCM,data:Owc4dZ+V2MYYLQCkbfdDtD2u7E2vOLHYdpF4+6zXT3vqLPV8FSFYJy+hltIN1Xk86mNnRerJF3B5CY5wkfFmIaObW1edexoBBOP4+en5klbhH89FMXWHXyw0gropMOFp9e/siQncpaMJKj5wqUUKaJhh1J11EwQTPOlGQZzYe48=,iv:zSb1UXAyOvuCAHnxOSf8B01RjGpFqT02krulVcXAONc=,tag:pv6+QDc28+gU8ZZHQemMcw==,type:str]
+    lastmodified: "2023-03-03T00:44:42Z"
+    mac: ENC[AES256_GCM,data:UpkmlLlLO/cYVFsL+xBAtef6THNNdkOIApraVXeEKlFrsyBJlqnJau6c4amzW4uuSSZXZHx13k4dm+rBly33jG91FvMYrUV+QIkyVBNHditQ5tpuhrYBiwCF168VhTNurZNhNWDjcbsRdycBFvkUPoZCJfTCL+Lu0WY9RUzv90o=,iv:r2R7Wh0OROeS/Q5c6nAke38q4Ytp7yz44sD5kVTOadE=,tag:UcGpZttzPX2NaIt5BMQhVQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
