--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:0UM34ftw,iv:trI5qQpBXR+mekIuE0Sy42oaltQYL2Tsrk61kuEgKbU=,tag:Ay+Lkw+Z21NfRgh08eu3RQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:9ltuZx9q,iv:DoOqSKd54RTPz1TvM3TJr+oSJc37WpO+smXUQS3ovhE=,tag:TZUY4Jw/KXwwkB8xdaeeaQ==,type:str]
+kind: ENC[AES256_GCM,data:S91+eoY1,iv:BWyO26+Pmo8JTDwuqO6jgF7ZGItNf2ol2v5tHghgaDw=,tag:z5ddbZq3518kUiVAbsL1Ug==,type:str]
+ansible_user: ENC[AES256_GCM,data:t08uRp98,iv:25t948DJDRxVGQZa/frWjF7WmAMNUEwC189zptHOdOQ=,tag:mU8BatKSovRqvCFLvWGrwA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFc0dsNFFsWkJuOWFlRCtu
-            eUtYQW95bXBZUVJ0SkNXMDZld241MUJsSm5rCmQyQjFiQzVoOXJ1L2t6eWIwOUVJ
-            ZE16TnMyREg1WHBESklNZytDNXUvdzAKLS0tIEExWFNranhlVUxSdVoyWVFJeWNY
-            bWdVdndHK01YVmdvUzI1VUlEMHRwd1EKZgig26pvETcXfCH1eT67wTlC748ekCGZ
-            YZZttJxwokJVx1Ke2xNDKAXd8AayZU/05Z4th0BSyJ00hT0zCDmElA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnUUUvNXBDak90QTNUVGJ2
+            MmlFbWlPeHR6c2NwUlo1c3pqTFdRNnYyYTM0CmZocVlSQ0c4ejJqTnBtb1ZOWUts
+            WUJrb0plcERhTWgrVEc3cUovWWN1WlUKLS0tIGltUUFySjkwVEhNWXpIeXJqZ0Y4
+            N2t3VnkzTlRSSlowV0ZtWVowQkNVVk0KEEIjeRjyrcZmbt01IF2D0j3+bo5Jfds0
+            NjjNAtHO1tWxJQVZIxoYP/mouIydbA3dizaJFf881Z7xVuEdRI/lhQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-02T04:14:10Z"
-    mac: ENC[AES256_GCM,data:l2LoJRuz6tcwxzcM1EcOGbH0JLXgMXrTQIBWxEPWNbJaUAOlLHV6W+b1eO/bsRAOHWHkQJzxpKVD7YLCB/JKL5ukS7X+LcWrFO/tv99Zy7NKzQv6SIu5koTyw0LrzvE1fAd4duHcwsCk2/YR6P91aPVejYkeqpsqzrHB5C1EDL0=,iv:TNx2/EVVLtUTAxaJPqJ/I6gy/JRBn3W7yjEOxdmGVXU=,tag:sMpVJCHuYA3yQHCZRE4APg==,type:str]
+    lastmodified: "2023-03-03T00:44:42Z"
+    mac: ENC[AES256_GCM,data:Tfe/VlvKlOjJAFtGG6DYzCd7eXRQFM1VJhGMxD3Ul8jCJbngXQkK/n7Za2+SpEdWwe9G2eYaGL+iRqpHbtMq/yKvfx1TOQPsaFEJIWcR4cIyyOXwQNFGv5EQlymfdswXNuaiW96KuRu867RgUq77Pcq9nwuI7hnAjeF9gZFQHXg=,iv:/D8di+2a4mT98YHfEShn3BX9uZ4vofPiiifgW637LOk=,tag:z3uXr5xUCuQ0aWEkxBf7Aw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
