--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:46l6hUDg,iv:jxi4Vv3DQbZ/pk3mxxi4GeRMHPHeUPl3eZG70Y/1vPE=,tag:FLQIdwToj97AwfH2hKMAeQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:qkidRWy6,iv:Za4pROdxneJMN+Z+PyhLUvQqNC+WoFPGNcCXUqDXhG0=,tag:p3vx8M3at7pA/N9IOZLmew==,type:str]
+kind: ENC[AES256_GCM,data:ajDbHRYu,iv:iSgCKqcSt2oWlJ7V+OKatiRhqQmMcTBWCKJOA7NezhE=,tag:ubrEK4klcTvEgEUHF2sXNg==,type:str]
+ansible_user: ENC[AES256_GCM,data:KZucQ8Dj,iv:BN7croNKsoMuCBfOJVG7gZzSBfMUEnxMvaufqfjhj1M=,tag:q6I0Fl4HoFoYjPbaeE9+AA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArQUxJbjJDa2J6UEl3TXNx
-            c0JmMGRDZDJMYW9OWFlpR0pHSm1tWTUxNm1ZCkRxT01BaEhMSE1CZ0I2ZVJFNGFx
-            N1BxNlVtYy9rSGkrc1pidENmTzFNOGcKLS0tIGViMGgyU3lYSXdlbzVLRDRuV1dx
-            TEZWcm55Z2JjUlY5aVJvU3lLRXBoencK6O1M0urZAu04dEnqIR8JfnInPXZzdL+7
-            4oroRGvaXhpoHxHkgjUpsrjytEQMPUwhMFtBa5va2sePFnV5RN4pHw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4WnJNWE9tbXZLU0VwMGM3
+            NHhuWW1vemZxTEZUV3NSSEVYaUpLZHFwQlRFCjBKbHRGcmRMVFI2Z2kydXRNU2Qw
+            MG5pK0JlNTV0SmxnNVNJZDc4a3ZsZXMKLS0tIG1WS1V1WmI2TkZVVE1YUmw1ckJS
+            TnlFSVlkTUxkWWxWcWs5MTkxTXZHUjgKviWOA/eVfXI2Fy2yFgsSFt7oYKxwOW9+
+            5XreatHPOM8plN0uPgdFSfUx0QVjw77x9coFheUIbqXqb0kfQB39Fw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-02T04:14:10Z"
-    mac: ENC[AES256_GCM,data:oL6i3O25Gfm9oxPLt5LEayrQXHDo3sDtrGTJ+lPAD3wv86uJx5xnPJa12ZfeZ7SmrpXCIzvZGS2MUCa5UqBu1be/L4qnM49GgkiGoY7rzRraAwuSTj+YaT7dSiC18BcVkxObPbiTw2cFunjfFWWXf9Uik8VRRAGvE1kgtXkYeBk=,iv:3DgAtilfaAu1uW9vQ8CCT2YI51JQESyfOAo3waC4XWg=,tag:ZYGJD0fhz1PlfCOe/qQgLA==,type:str]
+    lastmodified: "2023-03-03T00:44:42Z"
+    mac: ENC[AES256_GCM,data:V+EnksJY8P6SQOxjPFeptV21WBOV9paw65JNjPOarFsNmH58KstdDHq69bgW1OdVvdcQqUq0fyI5PIbg66rOq/+kZP+1Y8L6OIRPVviEcqsXiOgkg0S/QB8Gv16p13tjwmnpxA20trSuvaY8GRgq6COrHuWJx/CWaQQ/dHU70T0=,iv:tYJ2+H+zbhsV0oigDw4wdGLA2uqEINpazqclEHnOtok=,tag:hu1Bl4TY9V5h5ILcTOIa/w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
