--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:EA3LUQY/,iv:qcxSY6RLFmodn+5tUyvjg2VxhlPuwK3ET+/xKMWFMYc=,tag:04CPfWn7WiawD1vaCxL23w==,type:str]
-ansible_user: ENC[AES256_GCM,data:0pHuD35B,iv:keJq3pLaM0HJ/sBe3BQWaBgLvFGIaXgVL4zE9bp+Vvo=,tag:sniHrSEdrOt4KqbomQlR8w==,type:str]
+kind: ENC[AES256_GCM,data:lGiPwOLj,iv:XR4sVXBcAzqNs980hPUcXcGe9c3RqaPpGN/FTK+DmeU=,tag:/0MagNV7xIsR1D7G4g05sw==,type:str]
+ansible_user: ENC[AES256_GCM,data:0cXg4vDl,iv:nGNJAYbMnmYs8CQgv1L2EyCUO8sQpESbvT2km6jyads=,tag:prvSVukakIJPVljBKXoNFQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBScFF5dTJPTVZValloalcr
-            eEFvaVBYd09yTVprdGpBUmZtd3p5cHJmR1E0CmJWUjdzUjhFMkt4NnFGcnY0YjYv
-            NWczcVhaa1BLMU1Gd2xuVkFXZzdZOEkKLS0tIHlGNVAzb1dEV05pUUpFTWNtUmhk
-            RHpQUEhBWGpReWpEemJzN1RIRFR4VzQKpT9Oghwcn0Gn1B+Ite5hSzXxJbdkS9ng
-            tlDCS7XzJfXzStXQj4LXzmAtbvXbhmLpIDPGBueyJIHEFfQ3qUK6rw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlVjdoSDdscjQzUWtkUFJT
+            YURFWnBJTW53clB1cVZ6WGhrOUVEOXpLaUZFCkpqL1Vidk1acXR2M2lEVko4RkN0
+            dE5UTnJSQWJvdDBTTDJhRi9zR2pWMEUKLS0tICtLamx2VytReHY1anhib0w1Y1o1
+            NVh4ZmhVUTVDZTByWlJwUmVzdS9QaEkKwnGnuFQuwJTWoeSH/V1TdQUGESJgJaiI
+            s1uL6w2ev9J6VQ4V7UOx4jMEg1pc8DvIr4d5UFX6UIk5ZzmVrn/tGg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-02T04:14:10Z"
-    mac: ENC[AES256_GCM,data:ENPXEQ3r+Q/equ1dkGdooyi/Tbs5RufTJ/QTxfh2NPeK3+zR1ezBKjYIQcJzaTD7XL55xeOGBDjGurd1tbzG5mtbhSXEBkG8H+g+KTDnxyOge7dxc2p0kyWpKLqL/gOtzhiC62LcDzop7IGShp1HBnNDp4EfD6s9W9MrEKA0Slg=,iv:gCbO8UFLv4exMI5XD/Pn2N2DuTbx2OX94BoC17+W5d4=,tag:ma3h1Wxai5J4PMYw4VjDEg==,type:str]
+    lastmodified: "2023-03-03T00:44:42Z"
+    mac: ENC[AES256_GCM,data:mwNFNVd5eCOcBajQG0ZjSFK5MJmg1A2NjUxd886/8JCr+6MlY4ad1ovTghCbn3Oom6PN42hZSb8EnN5fKEwdPDR1SKH1MOOWQ19XPsCgag/xuvv70gJt6VXntgLhDYoF5YmM5mgRjVX8NNKOECfEbJPaAUdbNScSrWtKraaSsCo=,iv:eNh2ovnMRG8+gPgQpzRXVmg2TiiIBjmC8sQZ/ekaS5U=,tag:eGIKLuA3EBLG/Z1KBciMkA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
