--- a/ansible/inventory/kube/host_vars/k3s-07.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-07.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:pnJLoTGp,iv:Y/OxWf9uXI4dRkeQzMlnuesrzRLlvfwYRkoVbyEB8vU=,tag:OZmq8Q5PSkZ+RChPunO8GQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:xLj8JBM5,iv:oE8c/FqEyWzJ0SSmAufkeyDCf/8EK8mziH8/WUmvgBc=,tag:igFX/fOloIALSm6S7RKqHw==,type:str]
+kind: ENC[AES256_GCM,data://OEkmql,iv:4N25QcUnXy5MOHA3gdchtV1NlsDl/eeToo3+04eoo8c=,tag:hU7WARhsHZ+0GFjOM06U0A==,type:str]
+ansible_user: ENC[AES256_GCM,data:5gXjQy13,iv:v+nyNaCpjGXh6GXpWCQGnvM7IpR2/Qmmq0R0y097gFY=,tag:vQCh8NfPKfXrbRIjsvi6ig==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmbDNScFNFbk9WQmZSbENN
-            MVQvZ0Nsc1hXNzQ0T3E2OFI4a3dncFF6ekRBCkxIR3NUSE5rMUNIeFdOSklhNXY3
-            cFIyRWlUd1lSeG1YWWU2RGFCdHRWbUEKLS0tIFVHRk1SWHZuWCtoNWVVbGpOV2tS
-            YUhIZXlPYVY3Vm5WU0xoUGltbTRaeHMKTl9SjAS3ocCgrZJYFgjUd3+5vh1cn3Pe
-            qDGWBpkeRm+kNOpgNx33fQsIAOMjJ2O1zFT/7lgliw+VLHCSiP2Uww==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXYzM5Z3V5Wmc0blJhdWJi
+            VHBGZjJ3OENnWFkzSUU5RlNSSTRqZzQwcVRBCmVVV2V0WGpPWTJ1NjM5Z3UwaVlw
+            U1Jxck9DcmhadE5vaSs4WkRRNVlPeDgKLS0tIGIzMWw5ZUhLQm91aytURFZDV2NB
+            YTBPQmFZcUk3QnpYSGh0THpQZGJvTGcKhMtghAUrEPQvPFnCpYsdz/nOeqE287iL
+            R5aRKFo7XO8YBm6xaV19GEne3G0rl3CoOlYrFmhljD3noJa/TMhtSQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-02T04:14:10Z"
-    mac: ENC[AES256_GCM,data:G3nNGNR7QTPccXe9prev46MLX82U8hkPKKR9XhNuSlcRQmGVotz6fmvbgklqpO/jv+d1RkVQsM4RtBUjwq5pSC6lkZwGNjO8WqJnfBuvOj6qajs8zUoF+xks0Hj+vSeJyGo+1/pb9s6uK+E5bksgZ2VwppjTWDTUQIsiqSVVWRk=,iv:3NSuvoHZqk8+oDMzUdGlqoUUW2FIkeFfhiLTcF+qkMc=,tag:RbGk0v2H/V42mrFqY7pgsg==,type:str]
+    lastmodified: "2023-03-03T00:44:42Z"
+    mac: ENC[AES256_GCM,data:bjU1TAcwuuaDoR2LE0TSlYhSpYt/EOGNVhft+XBs+4mKyN5oDsq00XBxp1jYwyDQfg7C3Gn2L83IJvsIyDbGwCniTxjQgVgUiPxsBb981LN8DwLW1frS6szypaWKiyg66bT2wB54eFyBLi8rcCFdsmYE/Pn6yoORPFg5mDceIfw=,iv:boh9wTRRFdlCTBNM8KFfyzGEiGEDk6VNTMu20dEYurE=,tag:Ej2IXYjb5TKxqbVn8tLRtg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
