--- a/ansible/inventory/kube/host_vars/k3s-08.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-08.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:VppFvf2l,iv:vx8SAbKm9ms7qC/AIjQcUttfiBKXK3n2F8EaKXcj8Vs=,tag:v3aL4g24t8p+JLMAVfVI0A==,type:str]
-ansible_user: ENC[AES256_GCM,data:kh88t5aV,iv:/MfahN+CGcWQZG/Th8oBungdAwVxLSWqn3zaG4mJcFQ=,tag:VMu93mBV+zFV/Z5DLBDXOA==,type:str]
+kind: ENC[AES256_GCM,data:aVbntPPX,iv:nS7B3AIsfEmQ/vsHcKc3AIp+gsrm8EivYpAyViQuZ0k=,tag:nW5EWWhn2q6osLpLv0wHtw==,type:str]
+ansible_user: ENC[AES256_GCM,data:GdvLDImW,iv:aW9kSQNh9NEqAmrENUir77v9MDtt5VsaCnuMoe27Y6A=,tag:++ujhqQmoowWWjS+FUcDug==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHT1pKcGh1TXJPWWZxYXVU
-            S1gyaUVRVUlIN1IvYm0rY25qNXJvcENmbjBRCitjcFRqczJOdEhTSmRZR3IvbDZU
-            dVRQN3ZOci9uQXlScXJhcWVSTGw1TFkKLS0tIHArMUNNWEx3aE93UFRLaXdiUUp4
-            MFRHSUZobVR3bjAxV2phTENZcEJWVDAKBC36KEPLeW2SkZUyWXprjyqnkd/5df9h
-            pAabcWv+LTzejaWT1GOR5RiTX+I4glnlSifgRO7pF7fxuGzvfob8oQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0aFFJMmU2VWpVU2srZGo5
+            dmwveVVKVnBuTGFLbzB2bVFiTFJMZy93aENrCmRzOTAweXNTY2pTTGxlY09oZ0Ra
+            QjVBMklWSTNWbnMyR2pLS1pCVWc0OVUKLS0tIEorTlJkYllWaDhQV09KTmpwUzg5
+            YldhUjJmZWNFTnpvUnFFejVOdDM0eGsK3WmwhHoIWIzfr4+LI7rUDJyuzjuPW90c
+            x4B7fNZEBf0in9GkuIdCyCfV06Prxnuf37QPmrk3wQ0ekkboyeEHvQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-02T04:14:10Z"
-    mac: ENC[AES256_GCM,data:bD7Xh0tI4WAg6fjXWkZEAaFBmCeZH8rLHnFai6LWYqJ5YK5fFRwK/xcz+NhtAIOtdztGQ/Cx4nFlMCo4fGk31nYgDQ6OUVN+Tl1Oo4RA2Wq3SCFHhUjnSFwkeDZySuNt+Mj+MH6WflfGjPIQSKqBQbfJGPATZgKfFMJX+kxl3hI=,iv:bvDV3xyQBhf3lFk3a+vReRm2NlLNbHKISc8EPYrKnXk=,tag:Hv4VpOmERs8mWNPS5EhviA==,type:str]
+    lastmodified: "2023-03-03T00:44:42Z"
+    mac: ENC[AES256_GCM,data:X1noja+j+B/R90/8NpKUHkugL61DhDNlKWx1j1m16a8sn+fVHjG3rbHOOJkChZBfg4EbUVj/rFKKHaqjmmAa7LZBuwPrI3t26xMNrxmbpGsAeXGhggWT+VTQSHjtzTmmzqL+QQo+F9na0lRABVzFxypXQti9ncr9LEZpH53mSss=,iv:VM1IZqJ8eM0ntSsDSXPU9mT2pRDgVWV86uUKhwp4XAE=,tag:9qQtcxa0N08CNHufQdJHHA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
