--- a/ansible/inventory/kube/host_vars/k3s-09.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-09.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:+F08V3kP,iv:Mcb7XxMg4cIRYMUR1IOZJJfZ7NpxQ8KzxLPOl+jIgzE=,tag:3An5A8BZ6RVy0HD6SRtYBg==,type:str]
-ansible_user: ENC[AES256_GCM,data:Ox6QAGF9,iv:hyUp/VUekgGtrBnnE7lWCz8SWbDH/vX5kD2paYCmmdg=,tag:hco/YK+iMI8hTBnPRNL1HQ==,type:str]
+kind: ENC[AES256_GCM,data:bEizTqyA,iv:4kOLreHFKkfA/2pF3H9P8RE+oMY+F64WI43obifVpwQ=,tag:H0OJATEPlEVTOhXdVKoGTQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:jTpd1iHl,iv:Yq9FJYhZ61zKxijOQMgUePaqQOZwDNYSoSV0W2ophwQ=,tag:k1Y5Q3RcCfhtXeS2m6HXIw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtaFZVYTZkLzlpSUpnWVV4
-            cmhrVFZieHRjZDdORmRJS0JsSUZ1cmFFMUh3ClpYclVKZmtQdy9zazBRQ2FJeTJF
-            UWVpUnhFZlpVLzV6NmIwbjd0K3B3MjgKLS0tIDlGM0o3NDBPQ1FVb0h1dldYZytU
-            akRmM052aTZtb2x2OVp0a21CdXcrQ1EK3Q276/x9sSql8V3msEhCVfmpzNrmteXK
-            3E/Rq0TJ/gS0DIl+0xy0gz/2UO4sQDNkUPSXucFCe0qxWx7a/81GWg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBucFhwSk8vMEZrZncrTFdL
+            Y2VRYU9sOGlKdEcxd0NYbWEyNkdnSHdlN3hRCm5wSHhoanUyWi83SG14NHNSL0Zx
+            SVFYUk5ncWJvRGI1YStxWnE1aXc3V28KLS0tIFh6Q1hCZGVLMkdGOUNGQ3MzaUNn
+            WXJ1RjliUU9ibWdLZ1V1NzFzdjhVU1EKOSCooRJ36aNmJTsdG0belc6j7wD2gjiz
+            e6z7JI0r85A6cuOflevQ4cPmiiQCeCZza23dxEhrwGwbLNkGy8Al1g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-02T04:14:10Z"
-    mac: ENC[AES256_GCM,data:nDjmT1xEcxEAuq1Bg+9fhn3mw8MMBuhduyrYwSXMFNCVQqD3jnnMsTY+B7dzMtGHY41GTgUVeLrDErFN5AcdimGkI6nuu1Vw0lRR/nkUL3e4n0Y9t05UKda4+alVNfVkNa/szf7k9x2pJy1wQEJ211G2eTOZs9TsE4YCwBXHuig=,iv:rcdgefYi0mzS4qScBTUdbAzh7iNjk8R1FzTh0baHWtE=,tag:/169wlDhLb+XH88d6HVJcQ==,type:str]
+    lastmodified: "2023-03-03T00:44:42Z"
+    mac: ENC[AES256_GCM,data:AJjy2YOocEJDA3EKWDbMF2DEmQ36g+LPUzVMhr+dDMucEoGC9FOgJzEDzGoU9slhK9MopuO3IqpGlBeCqE8Rcw8hZ5qrn3G30QECE+mTYpW6wv9ETg4rXlOEMxw7n9DLJDQeJ4vTeYHjlaD3CdbjeBSL6qy+AItptBbn68L0N3w=,iv:AVzYXkZMH3Jl8Vvjm1NpJnUVW1LIYj0W/LAHrmljlPc=,tag:0kf1/BLouvah5UNToC3INw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
