--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:Ytb9LIlQPrRLDzHJMby5rMuX4k+5,iv:ZFy32CU0KL205cQ3Z+GIIrpwKDPqR/GhhxM7xUxajKs=,tag:dgstovLJ5qrFha9NPMAeTg==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:YTBXW57xflRE1qHGMtW9jPWiszZoghqbEgn32OrcCDCEOHBjSA==,iv:3gT4Yy15EdDdNpj5oFvcTMi0oUDhLgS385/FY+7sG3I=,tag:E6xseE4k/QwvYEUY97B9mg==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:okwb1GA8mhs1bUQ=,iv:WH90j5x8khO7JuJqEqUsbQ0+n7uxfdj/Gr9PrUNqhHg=,tag:wonzxL/4+wdyec9LALhMgw==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:dJOIY91P84notKNhsGnRuuJNMa4M,iv:e4ypo1pfyly5UqFtNOghrhrh1TI1UBzycDp0WBawM6U=,tag:burQwadY/QgD80YakBbp/g==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:aarIPQS+6k5JcCB4QSEkcHPxEVE8gTdyAYN2qjoiwAZoMTKIpg==,iv:joOt3crm1UjC3xUbLsp2TOEGUpGHXezmd2aWWFtKHP8=,tag:xY6FTyHVRdN2CD7uuejOqg==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:pnnk4VfdaEcb9cg=,iv:zrD0y7ha568L5RHpPfJBBswr+5xCc6aA4j7qn/Jl2P4=,tag:kh8yyrnuQaCvv290B6Zpkg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaamYzcFRCbXYrakJtOFBy
-            MnlPM0hNVzhWY0JTUDNRL3Y2Y2VRUklRblhvCldNMGhlckVwbWs2a3dPN1hCeDl3
-            MXFGYTVUanZMcEhQejJ1QVJDL3o5emsKLS0tIDB6SHdVbC9vbko4U2Y2cjVURHBH
-            d0YwYmFHeEQ5bWFTZ2JVRXFBTk1acDQKN0hOwVfJZjDbcbIlQ20JNK7hyJBP9MMD
-            WhCuCxwY0Y8YPNC4QJk9SvL5OgjTDsru5TH99a7lZ+ZoKUKj8AtZ4A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6WW9NQW9zOVR4cWprL2V4
+            RWo3TG91SWNZZXQwVjlBUHRoU0pwTy9CdkgwCjVvc0krcG0xZnBOcVpHMjhEWUVK
+            ejNwYytSSHBZeWJ3dkEzYk9idlN1NVkKLS0tIDNMdm5pUHRqeW9aRzBoOFA5VDFa
+            eWFqYU56dDdjOStFcDBCTWVUdXJPMjgKJFko+9glDMBrYVLLvERWFci7ZHQCfoGt
+            KJzbRm3mQ7ROBKu9es/wxVUCObj1I1M0mEp149f2PYUmsQnTu4bhBg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-02T04:14:10Z"
-    mac: ENC[AES256_GCM,data:Ttgz0xetwkTbDSXaHhgtPFQlt6HIhH524ICunOWEzgRTaGQoSaacvUmQCYXl/z4Lki3AeCnPVFVcAc460WrEqacxJAqJ0Admi+k1c9UAabjF5BfwqJ1gDG7kPL/C9+g8/uOfjvt1aiTql+GTn51dJ5zbZUeSJiirD1vnYGfx8BY=,iv:Qz6aM8aK7iNwvvcFimK0rLR2EhDQ+2s2IhLhMaMqHgw=,tag:A5dTu9ajNroXDxffIRMcRA==,type:str]
+    lastmodified: "2023-03-03T00:44:42Z"
+    mac: ENC[AES256_GCM,data:cY8w5Kgtt8KCCeYTvOT6LA02b9liw7fGZafGOlSncPt0xbF34CCLXBLG9mnBFCReXeZp0EEOcBzA1Oc/b7k6jC3lYwSZ7lDRwqPJ8fOCn4cfa4ATkoEZD8634Q5jnoyzjj43sjILoBBv/H9GZpFgUmu5uN0OmdUadYPGsLk8LMw=,iv:GvdphEv1mwBuKCtZ5oPClUTZOQYjmDQpGvPdgw0HlOc=,tag:7PGS3UxU8ZArg+ShlKy19g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
