--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,32 +4,32 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:tJilvVVbC0TIWQk=,iv:xI7aqC6mFGYGmvGaOSlqXdZ29jHYnXZTKheClXguAuQ=,tag:QPul8+06T8PqisEZl0/cCg==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:JZFTmZEAZbZJ3zwxJGRBzU5zCMn7,iv:mD1/G1/1BaWs9dePwT3FEX2QT48IsUkDDyMOTf6xkjI=,tag:aV6OkOq0Z3g3DaCPQqS1RA==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:TwfGSW3WRfIDsnT1J28XTUrPdrJgOpJU3Xj5Yn7L8iseGQDX3LdR0vtiI0BBQyzUm1M/tjDTXFk0pVs/1V5EsKoQMsrPTBY=,iv:eqV2QCPQ4lf3LAlKwTPJW7E2is20fh4bFHV/7KVChlY=,tag:e5fDldxNQicu7XTD3eLMng==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:wM6vlJmPhn0KTggLVA/1177hcdVDyw+4gcaY7sASUKwXWRw=,iv:F1/QJhbiiZhsSuRxxe7teAbn2qUTqI48Zh1TmWYFl6Q=,tag:7b58mxjA87qJzk8eGsJT1w==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:Sz0kwBaaCB/GeJXtmWyyYib2yQ==,iv:Tw9TEReWIaDSL+6BqTKp5LMsSYFCS520E9ZIfCDRH90=,tag:oD1N9PjgIFsTsBQNhgOEeQ==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:OeEs+GNYeCVjIyrKqee0um4F4vku,iv:3wcIHrs+2dIGATEaDE7qoL3/3xE+I1ehT/QxA6MJdeg=,tag:Rp7STwk//Q/OROITQMmnBA==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:ZnSKQVp6vXw=,iv:VsFcw3drUkcuO0jEYSvBi2EoJ9rFcr/zdBVRD5ePs4g=,tag:0aBu9PTGl9CzmL2s7g9Lzg==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:4SjySfCr/qc=,iv:MjBIoZ4VoHuXOf6EBwrk5tBznSBs1hqFDLI2/gNx27I=,tag:sdTBcO5f5mvu7wpuqc5WzA==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:caQBAjQ5qYhmk/FEfEgkaMT7u6uE/4s9DPCHQKd/qaLyE8uG3iMf4QnXZsS8qgFPpglEakxH80+WLImsx4ZgAA==,iv:80zz99IiRUjE9lid9y+/DekahrYp071k1lelUQTVzQg=,tag:819M8hCrEDW+1k0aftrFNg==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:EprTUJBbnjERAcvx9QwkFvsiWMSitlM3C1hKE/w1/FEjGepn3k1cobr+wqM2MS9kHke09jI9gbT3zJum80JaIA==,iv:LJHYOBcSku4VSa2mOqvVo1q+kL/YPTI3eaAHQGCNNSo=,tag:TMyWdcMThiX+IEYohxM7eg==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:/JnNEb+KcRmq,iv:rsjqQc5tXxP1nSPAAKEOj1jdj5x4QujtZzzvScWOxfU=,tag:fb2yOuV8blrLT7FqzbyK9A==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:IPDsJR2ICBPN7OzOeOsz,iv:c/WZnY5iBGxypGiEG+VkRWng8jTVm8L1s0HtlIZbUAU=,tag:zTCmu7NmYTaqLdJrakUJGA==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:mAfwMWtDgAEYBhc84fMdckSmBfAxt6NuyizAPbaKY7fe6s2znwBviqQ3cu8wL2NwIEk=,iv:7DjyudWl8KTb3uX/0BmoDEiXdFCxSKC8WPUPZp4TCaU=,tag:KBGh1Ga3VBSgBnNFMmmZIg==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:dog66gF3nuUvGlg/HLU=,iv:1zfmUl//mIPBsZwd2oYXFnajPDJJUltP/+cCMFKNOcg=,tag:1cup6fYQ7wNP983DSTJ8SA==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:UI7fwF7OPlH8kyn7uoEsP1dzS6U=,iv:gVKw/iDuACRC4yKgw8o/uT3OQCVWENF7V1ss0fgyfec=,tag:+Ucg/i3cNGCA8KxRJp34kQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:ecVvsUXNZw8=,iv:JTLh/rTzyhGLdD/KPbBEeMsSxhoal2lFZwbdDtSKCRI=,tag:y5FeZivBk5RELfTOIRsQkA==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:IWAbFzh55BQx8h6p9s1n5ooyQ3kyoR1tihwUqmiJruZpeUT+VQ==,iv:SaAV2bg0gLm2eo2NMVf4sqN6VY8IBr9ZnL8C00wl3vs=,tag:UfHpka3Mtwbc/D2E3Dolew==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:Cx49ViliTsHy,iv:wOeG6zptHz+x0+T7HVY0qPBFUMrk103jgkO4eqJGhMA=,tag:chpSBY3QC30bnoASHQLzRA==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:OLNUh/L4lf3z,iv:ECRKpVyYF5XXPoCLcZDrCD7LrQBbFddgYoavYAiaIYI=,tag:a5+zCjN0ifTIs8H11x1HnA==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:rHri8c/a2w==,iv:BdRyeqZEBgLGXs0/ZKjYgFm0xU70XsgSejeqosm+EFo=,tag:HooPrQj4i5yZjLNwlRbDTA==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:333WEPsFdhek,iv:QAsTS7mj1HobAS2nVVzpraoidGjmGCBnvn/Rt4UpQEo=,tag:cWQFOZ+vZXPUDvFTQUvqPw==,type:str]
-    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:FIiLF7whab9L7Td5HqQ=,iv:G+9ZiXqTwCSzU3ZZoyhJaF8CDi55w4C/yaEhlQLWuMU=,tag:mFCuDmMyF5a5Lmps7jHXDQ==,type:str]
-    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:0flqHTHAW7eN3JOC0gP2LivgKQ==,iv:+RI8+YUnyGD7Q1jIA8c6f7PRtL2lOpGRb/N9wt3zPNE=,tag:8UB2Wmj/79r3E2tUCgFwgA==,type:str]
-    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:F7Lp4Dp6/MI=,iv:u5FegQ8IyHWM+vJA9iHSCOVZzjETpnVJIetJ3AiSFGI=,tag:DSX21F5MktumN4EBK5Yx3w==,type:str]
-    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:bGiX5dmL29yRuUszvz0dvH4D0Q==,iv:KJPc5dsJSNCprAQnCqLxAgmPHyduGuLwwdKEspgt6nM=,tag:J9Jv4JvS/IhTm1U3yUugbQ==,type:str]
-    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:70dZpjzPS1z/,iv:QoSqKGE3asau1VccRgtZW54NGwLCO5M1X0kH98ZcyEI=,tag:1j5WKdnXjzHhyGdCLiVQUQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:BBN6s6cF7nsIZok=,iv:stUFx8oAs2LWFMrNgV1R1dgxOKIySm5s7ks9l3Pyv5g=,tag:KI0vnff6gR4L5wNmv3YvWQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:aFHiFmrc9t3OnMtTKUe7WP66VsdB,iv:+pDMglpJzpDPToa9D8zEzp1G18bQz2NMkcGVNK8Z+DU=,tag:d2GdKZWsn/WB1USGrJwFow==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:nfJ/hvh9olFrEXAiaKzeKBOLBaOre4akqMrgQDYTnT73p+awDL8OZO9W+LB0t5ZJCfcrFoxfwuGlmEtby/NHF52vRP+hex4=,iv:crdI78KEt+h/NvTwOEDlovRQbQJ4s9pOtllr3bqYk0E=,tag:OZBDSn22xVho+T9M1QzJ5Q==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:N9o34dzQjuSSXihk04RK7yJUcdWcFdTS7+uXxiWe69wK/XQ=,iv:Z7wSfNxL18I6GyNc+7SUcw8ObK5fk4M9DjWrr8y4d7M=,tag:l+zqAelJzYJ8W0afr06fqQ==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:97cvMjcvid0kyqp3CFuSLXDgCg==,iv:883z4DU7KmrfBeepWKXou+MEYQ/qkA0SRL7Mf4oGodU=,tag:EwzRxRUVLNy2I6SGNs5rmQ==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:3W00IUpZYJScLCxgxzQPOQmMrTiU,iv:X26ajaXV7/ssPREEEHFipx4ahQrLy5mBBUlWhoZNPP4=,tag:25dIH95nZ8mMl1/9O5TVmA==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:YAmwwASJo5c=,iv:MSWQaZeXZXaoZ+sf39+RK8njSY/eY3R1zibyCBoja0U=,tag:MF2I8C6tzPbUabrbpuuAZw==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:CApACCNODtY=,iv:9/s3L1casSu+ojwuDtyJuwRSNYhArhof36ujbR7VuSQ=,tag:72WLTmdjBIJyws5+Lix5wQ==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:HiTvTmFFRBWdngceRU6Bw0UfHy+M4MX0i3W2BeTNSbmWwKqUoB6RyugcvjEJx6WvAG5QETq/I8j2Iu3obeAU7Q==,iv:gcXfTRJwG35pv/H6vPQ3Um9bdS3uBbw064lFq7BHx9Q=,tag:LGoExwFmHdijuRlS+4x52g==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:Ecgus0jUKcUw0WfNVL2rkMRDK//MnyIw2lPfj0mB6PtcEYqjcsis7ItAHsXxewLlaEmxbK/JZMHlhVKqItC30w==,iv:NBmhpmIKvfaF9OFfaicFEKdHcJpwj7PzyQ4Wfr7/ISs=,tag:Zh6uFlxwmrWM4fl3tkv3Pg==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:LX/pI1easQy/,iv:Kd8R8oFXtjTWkSgV1eyyGDt87egYyFZ1MfEIqHVxHkE=,tag:LoGKowZHxfpf4QU+cU46lg==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:ODqmHbsHmPijw88Scugd,iv:JoqqA0Ty9xNNquegD5mgZW81aZAz92x8oKtYk8AblAI=,tag:guaHqItoFDm8UDyoCP+/LA==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:ZgQaZ1v8WpSfIS8kusBuJ9+WTJvFmI8v4+XRuRDCI3vIC2Il7XGF5PVGnpNiylCoLD0=,iv:j3a9/hsGjukOL/olq3dB1iZo6B75OFaOS1w9f9ZQRO4=,tag:/6kbgcxuaHHfwqHKhg/54Q==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:SPpwW9AtoGkTO1fkQYw=,iv:KrsfWIOSiRTRBT8yaUhOTHy2KGnzSORC4p8V4rzCsck=,tag:yI7z45+R1erR2X71b3TLzA==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:17Iu9YFJ5DvJOkiSIApBziiOwgc=,iv:tLdQXnVXjtdKrX/MWDS8V1gPEJL9O5+akgC8YHtiIR4=,tag:oveMTVV/3k1YgrE15xpn8A==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:l+ncM4cOD1w=,iv:IydsUj7gIPpMzbnz1ylzxObmalrhBnCTMi2FsYO8lyg=,tag:Yy1VJyVSxN6B23eZPkh7Lw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:pShRzGx3+hqX7eYRDfMtdOGNkTFn4lozWcQQe25f5ZdX0COG2A==,iv:IvBa/kBOAH7IOTBzswsvCKW+uK1xWNHS4pc0azSniZw=,tag:04PW/zj/hn/yN1es8DywIQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:orMXp2sztK/J,iv:JxdxGC+rfgFtlPByFCoASaaHuy4sraI3he95QCYw8QU=,tag:NAQnAiyu4mpCjmdF+yEdjw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:6PbWZF7ynXHA,iv:Lj+Cum6Apafk31eIM1pmM2OAe7h5dHY8/t4TOI2jwWY=,tag:C3FxYv20pTPWES9uzILu6w==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:IWNOi9aQRw==,iv:yUjfLY+zskZktCYeA8l7jMyeANTacI7YS2p1IgdiOqo=,tag:/n8pyv6P2MDqOmnWGLpcHw==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:BncgIQHqg7Py,iv:4tm9+wSYfjnZ/LgncMBPIIph7legjl8TeTQl4c7ArrA=,tag:4ud/IfEm/yGgffu+7y+Nrw==,type:str]
+    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:tA99MhLq6O1+2nnKy2DCVrOq,iv:+Q82iGXJH+wtzGAdkIuXENJbKvgrvpUx7qTFI33K8Yg=,tag:S5t542uV4gGDsV2+W9kUlg==,type:str]
+    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:aBIU+078NPcdWR2pKfMohex+3g==,iv:vtf0SofyiGMH+znDhlBv8TlTTW7lq90PhWGATs+QYMk=,tag:/vZqSmqu7e28Ttp5/OSdIQ==,type:str]
+    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:17qc0yHlI3U=,iv:nWHnc9JH+fuUrojjl79T0eY+frlCG6qsnjsHKs4jVaE=,tag:M1tVVfAr7qUplRSv57I7bg==,type:str]
+    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:S+o6yC3RhfiFGauo/5ZVEFQ30Q==,iv:G6Ftw/y1PFcQMf4CUq3tuilMGGr0avjTw8CXA5KEDms=,tag:hV4CmT1CP6gwsIVDkPRZDg==,type:str]
+    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:F10mCz5+6Wpa,iv:je2QMjS6ZGmrZ3vrlUHB7Pix5z3ZvcyTkvFue59pKPY=,tag:R+EGJENxRf/HD3lt+1Sa1A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -39,14 +39,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsYTliaU1RSWMxdzZwTEJp
-            SmVmcDlOZ3JSL2JlQ0U3Z09QZHZocExGWWtNCjBtbHpROERmS1BGZzQ3a0w2M2s5
-            MDFydUdFQjlCN1lKK096MW1IWldZdmMKLS0tIGo1NHk3TTNWT3daV3pmc0t5SWdo
-            YVVzUGRROGRXREM2MVhVU0U4NUtBQk0K3lxv2rROfwloh8x8QH98F5qlyQjijPiY
-            AkMnpt0Jsg3xYtM8Rumf0zSEN+R83ZaHEQN7gjUuanh8WdCLFhqwZA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDV3VTd0JPSzZaSkI3ZC9J
+            Y0ZJcVE4cU9kVFhwNUFsSE9HOXBFS2ZIQ2hzCjNzKzlQLzMya0doZkptNmxNTEpT
+            VU5ZSmNTNHpBMXYzcVVOTGo1ZnlMOEEKLS0tIDk2S1BHazZJK3JIbzBHc2gyVzVt
+            d0pDTHhWemhJMmRTdTdFaUF2LzF3ZTQKbRRJq1lQBFQQaLV0POD8F1WqQmED/aQB
+            53hOxZFzExTYW1fH1Zs1SNN2uuCfgRTaGOEWVNH9inl28nVpIX33bg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-02T04:14:10Z"
-    mac: ENC[AES256_GCM,data:qk1hYThucSGVXsJpbfordtEEiHtx8d/1Ebb+Q4+64iOZRRuoPcIuXaob8SLKOR4So+abmQCjsIXOLVhtENulrXsXebgPEsTur+r03hS7Kw3g7KqfSMSZ2Uq8mIfeUp0GlYsQ+SLms5RzN0eiI4fMRLjsU6fFjBCGgc0iQ191MJo=,iv:3nsbl5I/pu8uNASR3OVczzuMA+cizpVCDHuAPUoKVjI=,tag:nSxthPeCcuGoZ/S32cUzvQ==,type:str]
+    lastmodified: "2023-03-03T00:44:42Z"
+    mac: ENC[AES256_GCM,data:+JgtPUb7lMkD/IHgTyJ3XoxGFZxUlQsbZ4tDb0oU9CFyEjHVpovqBfrQBf9CeyNAOve78zCTHwibP75G/2jekAn1G7SlQjBe774PgI2B0P0WRYJDZAG1PveQp0pYKzx4h0kPi3zbtYAlfm0/8wS0UrI5ATzL/daO7Smu0FX+Ljw=,iv:Cbdy6tbtHh4xVb5B7YCt75z6Qt1M6KgNQg24VuKWVic=,tag:8+xRhmZulrWaiq+wOs2Tuw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
