--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:aj1EDowz,iv:yv+wLt/e9j24TjUPKabqXTXpXNjicA912yssz9A80yE=,tag:jxWkF/LBZt/oKpfyJZw3ig==,type:str]
-ansible_user: ENC[AES256_GCM,data:YlV1ttc1,iv:f6NCZQd5dvb0DTaPhYi/SKWGPayCZhKWtC89CsiSsk4=,tag:k/87EZVI0O27dbww/w0cNg==,type:str]
+kind: ENC[AES256_GCM,data:vHMpfhQY,iv:DxcZWmtMdu+cytgT0PjOmudMtAGIOJt8zmgafqUGP2A=,tag:RbzIR2mHpjornfVWi9vZmg==,type:str]
+ansible_user: ENC[AES256_GCM,data:9+nVrIgm,iv:T4OWDTTywrcBULtTXx3/SYiUlJjs83iEMs3GmPi1Vrw=,tag:wXrbf15G/CsihGd4tPYvEA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDMGxEaDI3c3NkVDJQUUcw
-            UXNTb28zWnU1QjdON2YvZHBrU3g2ekxoSkZZClkyWGJYTmVTRVpIa092NGRGVkxV
-            UThtajdxT0hweDBIVUxqcTJ3N3hjQ0UKLS0tIENKTWVpUzkwajBseFdqQ1lOaXRl
-            cGhuN0FobDhpd3k1dU8xTEMyc0h3b1UKYN61T5PfDpVQKqdt9CcCjgJx54eX0IZ7
-            YynDl7duCcNQL3wzAhWcRF3xxfHWjfb9tm901QUqNjAOnThLre9nqQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiMEt3WTBhMlViOGhOb0dI
+            d28wSllKZ3cyUEd0Vk0rZ3FCWnVLbzB1ZkYwClM3TkNLa3RTdVF0NFdvYnVUNUpy
+            dGw4WlAxZ1ZzRTh2V3ZXbWl6QXcvVDAKLS0tIG1zOWx2K1JubmNNN21xcTNvZlVQ
+            QjhhUmJNWmlvclUyTUNCY2RlMytOMU0K+tuiA7dobJ8N12dWbqbTb0ngvybfYNoM
+            AtX7L/KtQOJR2f54DWDPRqtVyFuAQa6GJudzxtzUV1ZSxYzNhTPsIQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-02T04:14:10Z"
-    mac: ENC[AES256_GCM,data:4WTxjA/o8Oime9Dqcbri/HNeuORJJmcPUg5iJB0xQ2b8CUMpLTN/44Zi6ypeJA6rvOazowGdI9eNYn/S8ZX3f18P87ieC/OL+zRz0S3keu5tI4dwPf2dD78VLkZxd1qGUh7K6QTFCTuVbpchmIgSsIEK+rfMXGrN8AbYkY1wqEU=,iv:priXB9/N5TgeH6vydqD21C40gI0IXDk2Pv6a1SG+IzI=,tag:y+LsQPmcjStBqHm3gHgvkw==,type:str]
+    lastmodified: "2023-03-03T00:44:42Z"
+    mac: ENC[AES256_GCM,data:u7oVnX+Pp+FvZdgHlVHwQ/VAg8enkxVXR4SAxqZjhlc20kZdbZmO84cNMgpVeGbdp42y91MJBKVSQgP3g7zb4qKk5A4kljZ+CHOMIYulRIZdhlxJyBaYl7qmN7A6YQTki59DSpAami9F82OwpcVjcN3wzclKaJhCUm7ekC3sqJw=,iv:MK4lW2+8ABhkScl2WmuM2Euy65X4Yz55C5+hBX729CY=,tag:fhEBQDEEBBAcI2S61VCT6g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
